# OmniAPI

./: .gitignore  DeploymentGuide.md  PRODUCTION_READY.md  readme.md  render.yaml
backend/: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  start.sh
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/db/: alembic.ini  session.py
backend/app/external_apis/: __init__.py  base.py  news_api.py  registry.py  stock_api.py  weather_api.py
backend/app/middleware/: auth_middleware.py  error_handler.py  logging_middleware.py  rate_limit.py  tenant_middleware.py
backend/app/models/: __init__.py  api_key.py  external_service.py  usage_log.py  user.py  webhook.py  webhook_event.py
backend/app/schemas/: analytics.py  api_key.py  auth.py  external_service.py  health.py  orchestrate.py  webhook.py
backend/app/services/: analytics_service.py  api_key_service.py  auth_service.py  cache_service.py  orchestrator_service.py  rate_limiter.py  webhook_service.py
backend/app/tasks/: analytics_tasks.py  celery_app.py  external_api_tasks.py  webhook_tasks.py
backend/app/utils/: decorators.py  encryption.py  exceptions.py  user_helpers.py
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_api_keys.py  test_audit_hardening.py  test_auth.py  test_cache.py  test_external_services.py  test_health.py  test_orchestrate.py  test_performance.py  test_rate_limiter.py  test_webhooks.py
(+120 files in other folders)
